<resources>
    <string name="app_name">Kahani</string>
    <string name="conti">By continuing you agree to our Terms of Service and Privacy Policy</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="kahani_suno">Kahani <font color="#ff914d">Suno.</font></string>
    <string name="short_audio_story">Short Audio <font color="#ff914d">Story</font></string>
    <string name="top_categories">Hot Episodes</string>
    <string name="cross"><strike>₹299</strike></string>
    <string name="default_web_client_id">768501752965-hvg04rh5qm17fmengtb3a07d1f4q7eb8.apps.googleusercontent.com</string>
    <string name="unlock_10_000">Unlock 10,000+ Exclusive Short \nStories and More!</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="amount_99">Amount <font color="#ff914d">₹99</font></string>

</resources>